# cmake_prj

./: .gitignore  CMakeLists.txt  build.sh
apps/: apps.cmake
apps/app_huatuo/: app.cmake
hal/: CMakeLists.txt
sdk/: CMakeLists.txt
sdk/base/: CMakeLists.txt
sdk/key/: CMakeLists.txt
sdk/led/: CMakeLists.txt
